force-app/main/default/objects/abd_Census__c/abd_Census__c.object-meta.xml
<CustomObject>
    <description>Global table that contains information regarding City/County.</description>
    <label>Census</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Census</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>