force-app/main/default/objects/abd_Census__c/fields/abd_County__c.field-meta.xml
<CustomField>
    <fullName>abd_County__c</fullName>
    <label>County</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_County_Name</valueSetName>
    </valueSet>
</CustomField>