force-app/main/default/objects/abd_Census__c/fields/abd_Local_Authority__c.field-meta.xml
<CustomField>
    <fullName>abd_Local_Authority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Authority</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Local Authority</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Census</relationshipLabel>
    <relationshipName>Census</relationshipName>
    <type>Lookup</type>
</CustomField>