force-app/main/default/objects/abd_Census__c/fields/abd_Name__c.field-meta.xml
<CustomField>
    <fullName>abd_Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>