force-app/main/default/objects/abd_Census__c/fields/abd_Population__c.field-meta.xml
<CustomField>
    <fullName>abd_Population__c</fullName>
    <label>Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>