force-app/main/default/objects/abd_Census__c/fields/abd_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>