force-app/main/default/objects/abd_Census__c/fields/abd_Year__c.field-meta.xml
<CustomField>
    <fullName>abd_Year__c</fullName>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>