force-app/main/default/objects/abd_Census__c/fields/County_Id__c.field-meta.xml
<CustomField>
    <fullName>County_Id__c</fullName>
    <label>County Id</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_County_Id</valueSetName>
    </valueSet>
</CustomField>