force-app/main/default/objects/abd_Census__c/fields/X18_Char_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_Char_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Char Id</label>
    <type>Text</type>
</CustomField>