force-app/main/default/objects/abd_Census__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>abd_Type__c</columns>
    <columns>abd_Name__c</columns>
    <columns>abd_Local_Authority__c</columns>
    <columns>abd_Population__c</columns>
    <columns>abd_Year__c</columns>
    <columns>abd_County__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>